# django-starter-template

./: .gitignore  docker-compose.yml  env.example  manage.py  pyproject.toml
_auth/: admin.py  apps.py  urls.py
_auth/managers/: __init__.py  user.py
_auth/migrations/: 0001_initial.py
_auth/models/: __init__.py  user.py
_auth/serializers/: __init__.py  token.py  user.py
_auth/serializers/user/: __init__.py  list.py
_auth/urls/: __init__.py  token.py  user.py
_auth/views/user/: __init__.py  list.py
base/models/: __init__.py  _base.py  _timestamp.py  _uuid.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: __init__.py  _apps.py  _base.py  _cache.py  _cors.py  _database.py  _defaults.py  _django_spectacular.py  _i18n.py  _jwt.py  _logging.py  _middlewares.py  _rest_framework.py  _security.py  _static.py  _templates.py  _validators.py  development.py
health/: urls.py
health/serializers/: __init__.py  auth_check.py  check.py
health/views/: __init__.py  auth_check.py  check.py
hello/: serializers.py  urls.py  views.py
